welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ';' expected but ')' found.
		if ((nums(i) == 6) || (nums(i) == 7)) && (flag = true)) {
                                                                      ^