welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var j:Int = 0;
	var flag:Boolean = false;
	for (i <- 0 to nums.length-1) {
		if (nums(i) == 6) flag = true;
		if ((nums(i) == 6) || (nums(i) == 7)) && (flag = true)) {
			flag = false; j = j+1;
		}
	}
	return j;
}
